package com.theinfectedhour.shared.dto;

import java.io.Serializable;

/** Achievement definition/earned info exchanged with the backend. */
public class AchievementDto implements Serializable {

    public String code;
    public String description;
}
