@startuml erd-database
title The Infected Hour — MySQL schema

entity users {
  * id : BIGINT <<PK>>
  --
  username : VARCHAR
  email : VARCHAR
  password_hash : VARCHAR
  created_at : TIMESTAMP
}

entity save_games {
  * id : BIGINT <<PK>>
  --
  # user_id : BIGINT <<FK>>
  level_reached : INT
  contamination_stats : JSON
  updated_at : TIMESTAMP
}

entity score_entries {
  * id : BIGINT <<PK>>
  --
  # user_id : BIGINT <<FK>>
  level_id : INT
  time_seconds : INT
  deaths : INT
  completed_at : TIMESTAMP
}

entity level_unlocks {
  * user_id : BIGINT <<FK>>
  * level_id : INT
  --
  unlocked_at : TIMESTAMP
}

entity achievements {
  * id : BIGINT <<PK>>
  --
  code : VARCHAR
  description : VARCHAR
}

entity user_achievements {
  * user_id : BIGINT <<FK>>
  * achievement_id : BIGINT <<FK>>
  --
  earned_at : TIMESTAMP
}

users ||--o{ save_games
users ||--o{ score_entries
users ||--o{ level_unlocks
users ||--o{ user_achievements
achievements ||--o{ user_achievements

@enduml
